--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,10 @@
                 android:resource="@array/preloaded_fonts"/>
 
         <activity android:name=".DesiredActivity">
-
+        </activity>
+        <activity android:name=".BaseActivity">
+        </activity>
+        <activity android:name=".SkillActivity">
         </activity>
     </application>
 
